# important-mcp-server

./: .gitignore
doc-mcp/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
doc-mcp/doc_mcp/: __init__.py  server.py
doc-mcp/parser/: azure_chunker.py  chunks.json  chunks_meta_data.json
doc-mcp/provider/: __init__.py
doc-mcp/provider/embeddings/: __init__.py  azure_openai.py
doc-mcp/provider/qdrant/: README.md  __init__.py  example.py  ingest.py  search.py
postgres-mcp/: pyproject.toml
postgres-mcp/src/postgres_mcp/: server.py
postgres-mcp/src/postgres_mcp/index/: dta_calc.py  llm_opt.py
postgres-mcp/src/postgres_mcp/schema/: database_schema.json
postgres-mcp/tests/unit/: test_schema_tool.py
viz-mcp/: pyproject.toml
viz-mcp/process/: index.py
viz-mcp/search/: explorer.py  test.py
viz-mcp/viz_mcp/: __init__.py  server.py
