[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viz-mcp"
version = "0.1.0"
description = "FastMCP server that exposes the ECharts schema index for exploration and validation."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.6.0",
]
